# ObjectDetection

Matlab/: calibration.m  calibrationSession3.mat  cameraParams1.mat  cameraParams108.mat  cameraParams2.mat  cameraParams3.mat  estimationError1.mat  estimationError10.8.mat  estimationError2.mat  estimationError3.mat  readme.txt
catkin_ws/src/camera_data/: CMakeLists.txt  package.xml
catkin_ws/src/camera_data/launch/: my_servers.launch
catkin_ws/src/camera_data/scripts/Cplus/: add_two_ints_client.cpp  add_two_ints_server.cpp  edge_detection.cpp  frames_broadcaster.cpp  icp.cpp  listener.cpp  talker.cpp
catkin_ws/src/camera_data/scripts/cpp/: CMakeLists.txt  iterative_closest_point.cpp  plane_detection_server.cpp  region_grow.cpp  register_server.cpp
catkin_ws/src/camera_data/scripts/python/: AlphaShape.py  boundingbox.py  boundingbox3d.py  calibration.py  cameraMatrixO  camera_tf_listener.py  check_plane.py  createImages.py  create_model.py  distortionO  drawgrapherror.py  ica_objects.py  icp.py  model2d.py  myFunctions.py  object_detection.py  object_detection_simulation.py  readPointCloud.py  test.py  testAlphaShape.py
catkin_ws/src/camera_data/srv/: PlaneDetection.srv  PlaneDetection1.srv  RegisterTwoPointClouds.srv
